--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -6,6 +6,6 @@ target = "x86_64-hobby_os.json"
 
 [unstable]
 build-std-features = ["compiler-builtins-mem"]
-build-std = ["core", "compiler_builtins"]
+build-std = ["core", "compiler_builtins",'alloc']
 
 # cargo build --target x86_64-alcolu.json -Z build-std=core -Z build-std-features=compiler-builtins-mem
